# RSI

./: .dockerignore  .env.example  .gitignore  AUDIT.md  Cargo.toml  Dockerfile  LICENSING.md  Makefile  README.md  ROADMAP_PRODUIT.md  SCIRUST_ACTIVATION.md  flake.nix  install.sh
.github/workflows/: ci.yml
docs/: INTEGRATION.md  INTEGRATION_STUDY.md  LLM_INTEGRATION.md  OPTIMIZATION.md  P1_DESIGN_SPIKE.md  ROADMAP.md  SAFETY.md  VALIDATION.md  WEB_ENV.md
examples/: bench_dot.rs  bench_json.rs  bench_kernel.rs  bench_matmul.rs  bench_reduce.rs  bench_sha256.rs  bench_transpose.rs  dgm_selfimprove.rs  jetson_substrate.rs  omega_real.rs  self_improve.rs  self_improve_real.rs
paper/: rsi.md  rsi.tex
scripts/: auto-connect.sh  session-start-hook.sh  web-setup.sh
src/: agent.rs  api.rs  ascent.rs  audit.rs  ccos_audit.rs  checkpoint.rs  cma.rs  convergence.rs  criticality.rs  dgm.rs  dynamics.rs  forge_meta.rs  forge_substrate.rs  hw_probe.rs  json.rs  kernels.rs  knowledge.rs  lib.rs  linalg.rs  llm.rs  loop_ctrl.rs  main.rs  measured_substrate.rs  memory.rs  meta.rs  obs.rs  octasoma_memory.rs  omega_tasks.rs  plot.rs  prompt.rs  report.rs  rng.rs  schedule.rs  scirust_bridge.rs  sha256.rs  state.rs  substrate.rs  surface.rs  swarm.rs  synthesis.rs  (+3 more)
tests/: integration.rs
