[package]
name = "rsi"
version = "0.9.0"
edition = "2021"
description = "Recursive Self-Improvement — implémentation Rust du système géométrique unifié (v9)"
license = "MIT"
authors = ["RSI"]

[lib]
name = "rsi"
path = "src/lib.rs"

# Le cœur reste sans dépendance ; les backends réels sont optionnels.
[features]
default = []
# Méta-optimiseur ℳ et substrat P_eff adossés au moteur Forge (exécution réelle).
forge = ["dep:forge-core", "dep:rand", "dep:serde"]
# Mémoire contextuelle C adossée au moteur de mémoire fractale OctaSoma.
octasoma = ["dep:octasoma"]

[dependencies]
forge-core = { git = "https://github.com/CHECKUPAUTO/forge", optional = true }
octasoma = { git = "https://github.com/CHECKUPAUTO/octasoma", optional = true }
rand = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[[bin]]
name = "rsi-demo"
path = "src/main.rs"

[[bin]]
name = "rsi-mcp"
path = "src/bin/rsi_mcp.rs"

[[bin]]
name = "rsi-connect"
path = "src/bin/rsi_connect.rs"

[profile.release]
opt-level = 3
lto = true
