[package]
name = "rsi"
version = "0.10.0"
edition = "2021"
description = "Recursive Self-Improvement — implémentation Rust du système géométrique unifié (v9)"
# Double licence (cf. LICENSING.md) : gratuit en usage non commercial sous
# PolyForm-Noncommercial-1.0.0, licence commerciale séparée sinon. L'expression
# SPDX « A OR B » reflète le choix laissé à l'utilisateur (LicenseRef pour la
# licence commerciale, hors liste SPDX standard).
license = "PolyForm-Noncommercial-1.0.0 OR LicenseRef-Commercial"
authors = ["Tarek Zekriti / CHECKUPAUTO"]

[[bin]]
name = "rsi-full"
path = "src/bin/rsi_full.rs"
required-features = ["forge", "octasoma", "ccos"]

[lib]
name = "rsi"
path = "src/lib.rs"

# Le cœur reste sans dépendance ; les backends réels sont optionnels.
[features]
default = []
# Méta-optimiseur ℳ et substrat P_eff adossés au moteur Forge (exécution réelle).
forge = ["dep:forge-core", "dep:rand", "dep:serde"]
# Mémoire contextuelle C adossée au moteur de mémoire fractale OctaSoma.
octasoma = ["dep:octasoma"]
# Audit/déterminisme adossé à l'EventLog hash-chaîné de CCOS.
ccos = ["dep:ccos"]
# Moteur d'ascension réel `scirust-rsi` (dépendance git CHECKUPAUTO/scirust).
# Voir SCIRUST_ACTIVATION.md. Activer avec : --features scirust.
scirust = ["dep:scirust-rsi", "dep:rand"]
# Backend LLM local Ollama (client HTTP minimal sur std::net, sans dépendance).
# Active OllamaClient pour brancher un modèle local (http://localhost:11434).
llm-ollama = []
# Backend LLM Claude (API Anthropic Messages). std-only : la logique (requête /
# parsing) est sans dépendance ; le transport HTTPS/TLS est injecté par l'hôte
# (trait ClaudeTransport), car std n'offre pas de TLS.
llm-claude = []
# Transport HTTPS turnkey pour Claude via `ureq` (bloquant, rustls). Fournit
# UreqTransport prêt à l'emploi. Nécessite le réseau (api.anthropic.com).
llm-claude-ureq = ["llm-claude", "dep:ureq"]

[dependencies]
forge-core = { git = "https://github.com/CHECKUPAUTO/forge", optional = true }
octasoma = { git = "https://github.com/CHECKUPAUTO/octasoma", optional = true }
ccos = { git = "https://github.com/CHECKUPAUTO/CCOS", optional = true }
rand = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
scirust-rsi = { git = "https://github.com/CHECKUPAUTO/scirust", optional = true }
ureq = { version = "2", optional = true }

[[bin]]
name = "rsi-demo"
path = "src/main.rs"

[[bin]]
name = "rsi-mcp"
path = "src/bin/rsi_mcp.rs"

[[bin]]
name = "rsi-connect"
path = "src/bin/rsi_connect.rs"

[[bin]]
name = "rsi-ablate"
path = "src/bin/rsi_ablate.rs"

[[bin]]
name = "rsi-loopbench"
path = "src/bin/rsi_loopbench.rs"

[[bin]]
name = "rsi-refine"
path = "src/bin/rsi_refine.rs"

[profile.release]
opt-level = 3
lto = true
